(feat) add logfire dependencies

--- a/environment.yml
+++ b/environment.yml
@@ -17,3 +17,6 @@ dependencies:
       - flake8
       - isort
       - pre-commit
+      - logfire
+      - logfire[fastapi]
+      - logfire[system-metrics]
