(feat) remove hbotrc in favor of direct usage of paho and asyncio mqtt

--- a/environment.yml
+++ b/environment.yml
@@ -13,10 +13,10 @@ dependencies:
   - pip
   - pip:
       - hummingbot
-      - git+https://github.com/hummingbot/hbot-remote-client-py.git
       - flake8
       - isort
       - pre-commit
       - logfire
       - logfire[fastapi]
       - logfire[system-metrics]
+      - aiomqtt>=2.0.0
