--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   backend-api:
     container_name: backend-api
@@ -14,8 +12,11 @@ services:
       - BROKER_PORT=1883
       - USERNAME=admin
       - PASSWORD=admin
+      - DATABASE_URL=postgresql+asyncpg://hbot:backend-api@postgres:5432/backend_api
     networks:
       - emqx-bridge
+    depends_on:
+      - postgres
   emqx:
     container_name: hummingbot-broker
     image: emqx:5
@@ -47,6 +48,25 @@ services:
       interval: 5s
       timeout: 25s
       retries: 5
+  postgres:
+    container_name: backend-postgres
+    image: postgres:15
+    restart: unless-stopped
+    environment:
+      - POSTGRES_DB=backend_api
+      - POSTGRES_USER=hbot
+      - POSTGRES_PASSWORD=backend-api
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+    networks:
+      - emqx-bridge
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U hbot -d backend_api"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 networks:
   emqx-bridge:
@@ -56,3 +76,4 @@ volumes:
   emqx-data: { }
   emqx-log: { }
   emqx-etc: { }
+  postgres-data: { }
