(feat) add required dependencies

--- a/environment.yml
+++ b/environment.yml
@@ -20,3 +20,7 @@ dependencies:
       - logfire[fastapi]
       - logfire[system-metrics]
       - aiomqtt>=2.0.0
+      - sqlalchemy>=2.0.0
+      - asyncpg
+      - psycopg2-binary
+      - greenlet
